--- a/UI/CSS/signupform.css
+++ b/UI/CSS/signupform.css
@@ -3,7 +3,7 @@ body{
     margin: 0;
     height: 100%;
     width: 100%;
-    background: url('../ASSETS/pexels-photo-417411.jpeg');
+    background: url('../ASSETS/banka.jpg');
     background-size: cover;
 }
 /* css styles for user sign up */
@@ -119,7 +119,7 @@ body{
 } */
 /* media queries fron sign up button */
 
-@media all and (max-width: 1440px){
+/* @media all and (max-width: 1440px){
     .non-slider .signUp input[type="submit"]{
         margin-left: 70px;
     }
@@ -172,4 +172,57 @@ body{
 .errMessage{
     display: none;
     color: rgb(252, 193, 66);
+} */
+
+
+
+/* media queries for login */
+
+@media (max-width: 1440px){
+    .non-slider .signUp .signUpInput{
+        margin-left: 120px;
+    }
+     .non-slider .signUp{
+        width: 50%;
+    }
+    .non-slider .signUp input[type="submit"]{
+        margin-left: 120px;
+        margin-bottom: 30px;
+    }
+}
+@media (max-width: 1024px){
+    .non-slider .signUp .signUpInput{
+        margin-left: 90px;
+    }
+     .non-slider .signUp{
+        width: 60%;
+    }
+    .non-slider .signUp input[type="submit"]{
+        margin-left: 90px;
+        margin-bottom: 30px;
+    }
+}
+@media (max-width: 768px){
+    .non-slider .signUp .signUpInput{
+        margin-left: 85px;
+    }
+     .non-slider .signUp{
+        width: 70%;
+    }
+    .non-slider .signUp input[type="submit"]{
+        margin-left: 85px;
+        margin-bottom: 30px;
+    }
+}
+@media (max-width: 425px){
+    .non-slider .signUp .signUpInput{
+        margin-left: 50px;
+    }
+     .non-slider .signUp{
+        width: 80%;
+    }
+    .non-slider .signUp input[type="submit"]{
+        margin-left: 50px;
+        margin-bottom: 30px;
+    }
 }
