--- a/UI/CSS/styles.css
+++ b/UI/CSS/styles.css
@@ -1,5 +1,4 @@
 body{
-    border: 2px solid black;
     margin: 0;
     padding: 0;
     height: 100%;
@@ -106,7 +105,7 @@ body{
     text-decoration: none;
     padding: 10px 10px 10px 15px;
     display: block;
-    font-size: 18px;
+    font-size: 20px;
     color:#fff;
     
 }
@@ -118,17 +117,17 @@ body{
     position:absolute;
     top: 0px;
     right: 15px;
-    font-size: 40px;
+    font-size: 30px;
     display: none;
 }
 
 /* welcome page media query */
-@media all and (max-width:2559px){
+@media (max-width:2559px){
     .navbar{
         width: 100%;
     }
 }
-@media all and (max-width:1024px){
+@media (max-width:1024px){
     .navbar{
         width: 100%;
         height: 69px;
@@ -147,7 +146,7 @@ body{
     }
    
 }
-@media all and (max-width:959px){
+@media (max-width:959px){
     body{
         margin: 0;
         padding: 0;
@@ -181,7 +180,7 @@ body{
     
 }
 
-@media all and (max-width:640px){
+@media (max-width:640px){
     body{
         margin: 0;
         padding: 0;
@@ -244,7 +243,7 @@ body{
 }
 #main-area .non-slider{
     /* border: 2px solid green; */
-    background:whi;
+    background:white;
     flex-basis: 60%;
 }
 
@@ -356,12 +355,12 @@ body{
 }
 
 /* media queries for sliding area */
-@media all and (max-width: 1439px){
+@media (max-width: 1439px){
     #main-area .slider p{
         font-size: 27px;
     }
 }
-@media all and (max-width: 959px){
+@media (max-width: 959px){
     #main-area .slider figure img{
         width: 100%;
         height: 500px;
@@ -378,7 +377,7 @@ body{
         color: white;
     }
 }
-@media all and (max-width: 649px){
+@media (max-width: 649px){
     
     #main-area .slider figure img{
         width: 100%;
@@ -390,15 +389,6 @@ body{
     #main-area .slider p{
         font-size: 20px;
         padding-top: 135px;
-    }
-    .non-slider{
-        display: block;
-    }
-    #main-area .slider{
-        flex-basis: 30%;
-    }
-    #main-area .non-slider{
-        flex-basis: 70%;
     }
 
 }
@@ -474,16 +464,23 @@ body{
 }
 
 /* media queries for homeServices */
-@media all and (max-width: 959px){
+@media (max-width: 959px){
     .non-slider{
-        flex-direction: column;
-        flex-flow: column-reverse;
+        border: 2px solid red;
+        display: flex;
+        flex-direction: row;
+        /* flex-flow: column-reverse; */
     }
+    .non-slider{
+        flex-flow: row wrap;
+        
+    }
+
 }
-@media all and (max-width: 649px){
+@media (max-width: 649px){
     #main-area .non-slider{
-        flex-direction: column;
-        flex-flow: column-reverse;
+        flex-direction: row;
+        /* flex-flow: column-reverse; */
     }
     
 }
@@ -501,23 +498,23 @@ body{
 
 /* media queries fron sign up button */
 
-@media all and (max-width: 1440px){
+@media (max-width: 1440px){
     .non-slider .login input[type="submit"]{
         margin-left: 380px;
     }
 }
-@media all and (max-width: 1024px){
+@media (max-width: 1024px){
     .non-slider .login input[type="submit"]{
         margin-left: 250px;
     }
 }
-@media all and (max-width: 959px){
+@media (max-width: 959px){
     .non-slider .login input[type="submit"]{
         margin-left: 270px;
     }
     
 }
-@media all and (max-width: 649px){
+@media (max-width: 649px){
     .non-slider .login input[type="submit"]{
         margin-left: 118px;
     }
@@ -534,15 +531,16 @@ body{
 }
 .adsArea{
     widows: 100%;
-    margin: 50px;
+    margin: 20px;
     padding: 0;
     text-align: center;
     display: flex;
+    flex-direction: row;
 }
 .window{
-    /* border: 2px solid black; */
-    width: 25%;
-    margin-left: 20px;
+    border: 2px solid black;
+    width: 23%;
+    margin-left: 10px;
     text-align: center;
     height: 250px;
     background-color:#4f7de0;
@@ -559,6 +557,114 @@ body{
 }
 .window h1 {
     font-size: 40px;
+}
+/* Media querry for window part */
+@media (max-width: 1024px){
+    #main-area .main-area-images{
+        height: 350px;
+        width: 100%;
+    }
+    #main-area .slider .longParagraph p{
+        font-size: 20px;
+        padding-top: 90px;
+    }
+    #main-area .slider .Two p{
+        color: goldenrod;
+        padding-top: 90px;
+    }
+    #main-area .slider .Three p{
+        color: white;
+        padding-top: 90px;
+    }
+    #main-area .slider .Five p{
+        color: white;
+        padding-top: 90px;
+    }
+    #main-area .slider .Four p{
+        color: white;
+        padding-top: 90px;
+    }
+    #main-area .slider h1{
+        font-size: 90px;
+        font-weight: bold;
+        color: rgb(253, 176, 9);
+        text-align: center;
+        position: absolute;
+        padding-top: 90px;
+        width: 20%;
+    }
+    .adsArea{
+        padding-left: 0px;
+        padding-right: 10px;
+        flex-wrap: wrap;
+        margin-left: 2px;
+    }
+    .window{
+        margin-left: 13px;
+        width: 23%;
+    }
+    .window i {
+        margin-top: 10px;
+        font-size: 80px;
+        color: rgb(253, 176, 9);
+    }
+    .window h1 {
+        font-size: 30px;
+    }
+}
+@media (max-width: 959px){
+    .adsArea{
+        padding-left: 25px;
+        flex-wrap: wrap;
+        margin-left: 40px;
+    }
+
+    .window{
+        border: 2px solid black;
+        margin-left: 27px;
+        width: 40%;
+        height: 250px;
+    }
+    .window i {
+        margin-top: 10px;
+        font-size: 70px;
+        color: rgb(253, 176, 9);
+    }
+    .window h1 {
+        font-size: 30px;
+    }
+
+}
+.adsArea{
+        padding-left: 40px;
+        flex-wrap: wrap;
+    }
+@media (max-width: 425px){
+    .adsArea{
+        /* margin-right: 10px; */
+        flex-wrap: wrap;
+        height: 1350px;
+        padding-left: 0px;
+        padding-right: 20px;
+    }
+    .window{
+        border: 2px solid black;
+        margin-top: 5px;
+        width: 95%;
+        height: 300px;
+        padding: 20px 5px 0 5px;
+    }
+    .window i {
+        margin-top: 10px;
+        font-size: 70px;
+        color: rgb(253, 176, 9);
+    }
+    .window h3 {
+        font-size: 18px;
+    }
+    .window h1 {
+        font-size: 30px;
+    }
 }
 /* AFTER SIGN UP PAGE STYLING */
 #main-areaPage{
@@ -708,7 +814,7 @@ body{
 }
 /* media queries for after sign up page */
 
-@media all and (max-width: 649px){
+@media (max-width: 649px){
     #main-areaPage{
         flex-flow: column-reverse;
        height: 1080px;
@@ -725,6 +831,7 @@ body{
         margin-bottom: 80px;
     }
     .adsArea{
+        margin: 5px;
         font-size: 30px;
     }
     .signupDashboard{ 
@@ -741,7 +848,7 @@ body{
 /* CSS STYLES FOR MAIN-AREA RIGHT SIDE */
 
 /* media queries for main-area rigt side part */
-@media all and (max-width: 649px){
+@media (max-width: 649px){
     
 }
 /* create account styling */
@@ -866,12 +973,12 @@ body{
 
 /* media queries fron sign up button */
 
-@media all and (max-width: 1439px){
+@media (max-width: 1439px){
     .main-area-right .createAccount input[type="submit"]{
         margin-left:0;
     }
 }
-@media all and (max-width: 959px){
+@media (max-width: 959px){
     .main-area-right .createAccount input[type="submit"]{
         margin-left: 0;
     }
@@ -879,7 +986,7 @@ body{
         height: 1170px;
     }
 }
-@media all and (max-width: 649px){
+@media (max-width: 649px){
     .main-area-right .createAccount input[type="submit"]{
         margin-left:0;
     }
@@ -944,7 +1051,9 @@ body{
     /* opacity: .9; */
     
 }
-
+.main-area-right .transactionsPageHome table tr:hover{
+    background: #6b9aff;
+}
 
 /* @keyframes animation{
 0%{top:-50px;}
@@ -982,21 +1091,21 @@ body{
     background: #6b9aff;
 }
 /* media queries for transactions */
-@media all and (max-width: 1024px){
+@media (max-width: 1024px){
     .main-area-right .transactionsPage{
         font-size: 10px;
         height: 400px;
     }
 }
 
-@media all and (max-width: 959px){
+@media (max-width: 959px){
     .main-area-right .transactionsPage{
         font-size: 10px;
         height: 500px;
     }
 }
 
-@media all and (max-width: 649px){
+@media (max-width: 649px){
     .main-area-right .transactionsPage{
         font-size: 12px;
         height: 500px;
@@ -1012,7 +1121,7 @@ body{
 } */
 
 /* media queries for after login dashboard page */
-@media all and (max-width: 649px){
+@media (max-width: 649px){
     /* #main-areaPage{
         height: 1600px;
     } */
