--- a/UI/CSS/loginform.css
+++ b/UI/CSS/loginform.css
@@ -38,11 +38,11 @@ body{
 }
 .non-slider .login .loginInput{
     position: relative;
-    margin-left: 100px;
-    width: 80%;
+    margin-left: 50px;
+    width: 90%;
 }
 .non-slider .login .loginInput input{
-    width: 80%;
+    width: 85%;
     padding: 17px 0;
     margin-top: 10px;
     font-size: 16px;
@@ -84,15 +84,15 @@ body{
     border-radius: 10px;
     font-size: 18px;
     text-align: center;
-    margin:10px 0 0 100px;
-    width: 64%;
+    margin:10px 0 20px 50px;
+    width: 78%;
 }
 .non-slider .login input[type="submit"]:hover{
     background: rgb(253, 176, 9);
     opacity: .5;
     color: #3b5998;
 }
-.closeSignUp-icon{
+.closelogin-icon{
     text-decoration: none;
     font-size: 30px;
     color: #fff;
@@ -104,16 +104,39 @@ body{
 
 /* media queries for login */
 
+@media (min-width: 1800px){
+    .non-slider .login .loginInput{
+        margin: 0 auto 0 210px;
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+    }
+     .non-slider .login{
+        width: 50%;
+    }
+    .non-slider .login input[type="submit"]{
+        margin: 15px auto 0 210px;
+        width: 68.5%;
+        margin-bottom: 30px;
+    }
+}
+
+
 @media (max-width: 1440px){
     .non-slider .login .loginInput{
-        margin-left: 120px;
+        /* margin-left: 120px; */
+        margin: 0 auto 0 105px;
+        width: 80%;
+        display: flex;
+        flex-direction: column;
     }
     .non-slider .login{
         width: 50%;
     }
     .non-slider .login input[type="submit"]{
-        margin-left: 120px;
+        margin: 15px auto 0 105px;
         margin-bottom: 30px;
+        width: 68%;
     }
 }
 @media (max-width: 1024px){
@@ -142,13 +165,17 @@ body{
 }
 @media (max-width: 425px){
     .non-slider .login .loginInput{
-        margin-left: 50px;
+        margin: 0 auto 0 27px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
     }
     .non-slider .login{
-        width: 80%;
+        width: 90%;
     }
     .non-slider .login input[type="submit"]{
-        margin-left: 50px;
+        margin-left: 27px;
+        width: 85%;
         margin-bottom: 30px;
     }
 }
