--- a/UI/CSS/signupform.css
+++ b/UI/CSS/signupform.css
@@ -43,13 +43,14 @@ body{
 }
 .non-slider .signUp .signUpInput{
     position: relative;
-    margin-left: 100px;
+    margin: 0 auto 0 80px;
     width: 80%;
 }
 .non-slider .signUp .signUpInput input{
+    position: relative;
     width: 80%;
     padding: 17px 0;
-    margin-top: 10px;
+    margin: 10px auto;
     font-size: 16px;
     border-radius: 10px;
     font-family: Arial, Helvetica, sans-serif;
@@ -96,7 +97,7 @@ body{
     width: 64%;
     padding: 17px 0;
     margin: 10px;
-    margin-left: 100px;
+    margin: 0 auto 40px 80px;
     font-family: Arial, Helvetica, sans-serif;
 
 }
@@ -114,6 +115,11 @@ body{
     right: 15px;
 
 }
+.errMessage{
+    display: none;
+    color: rgb(252, 193, 66);
+} 
+
 /* .closeSignUp-icon:hover{
     color: #6b9aff;
 } */
@@ -169,18 +175,34 @@ body{
         width: 100%;
     }
 }
-.errMessage{
+
+/* .errMessage{
     display: none;
     color: rgb(252, 193, 66);
-} */
-
+} 
 
 
 /* media queries for login */
+@media (min-width: 1800px){
+    .non-slider .signUp .signUpInput{
+        margin: 0 auto 0 230px;
+    }
+     .non-slider .signUp{
+        width: 50%;
+    }
+    .non-slider .signUp input[type="submit"]{
+        margin: 0 auto 40px 230px;
+        margin-bottom: 30px;
+    }
+}
 
 @media (max-width: 1440px){
     .non-slider .signUp .signUpInput{
-        margin-left: 120px;
+        /* margin-left: 120px; */
+        margin:0 auto;
+        width: 80%;
+        display: flex;
+        flex-direction: column;
     }
      .non-slider .signUp{
         width: 50%;
@@ -188,41 +210,57 @@ body{
     .non-slider .signUp input[type="submit"]{
         margin-left: 120px;
         margin-bottom: 30px;
+        width: 65%;
     }
 }
 @media (max-width: 1024px){
     .non-slider .signUp .signUpInput{
-        margin-left: 90px;
+        /* margin-left: 90px; */
+        margin:0 auto;
+        width: 80%;
+        display: flex;
+        flex-direction: column;
     }
-     .non-slider .signUp{
+    .non-slider .signUp{
         width: 60%;
     }
     .non-slider .signUp input[type="submit"]{
-        margin-left: 90px;
+        margin-left: 100px;
+        width: 65%;
         margin-bottom: 30px;
     }
-}
+    }
+   
+
 @media (max-width: 768px){
     .non-slider .signUp .signUpInput{
-        margin-left: 85px;
+        /* margin-left: 85px; */
+        margin:0 auto;
+        width: 81%;
+        display: flex;
+        flex-direction: column;
     }
      .non-slider .signUp{
         width: 70%;
     }
     .non-slider .signUp input[type="submit"]{
-        margin-left: 85px;
+        margin-left: 90px;
         margin-bottom: 30px;
     }
 }
 @media (max-width: 425px){
     .non-slider .signUp .signUpInput{
-        margin-left: 50px;
+        margin:0 auto;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
     }
      .non-slider .signUp{
-        width: 80%;
+        width: 90%;
     }
     .non-slider .signUp input[type="submit"]{
-        margin-left: 50px;
+        margin-left: 35px;
+        width: 80%;
         margin-bottom: 30px;
     }
 }
