--- a/UI/CSS/styles.css
+++ b/UI/CSS/styles.css
@@ -1276,7 +1276,7 @@ body{
     margin: 50px auto;
     margin-top: 82px;
     width: 70%;
-    height: 500px;
+    /* height: 500px; */
     background: #3b5998;
     color: #fff;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
