--- a/UI/CSS/styles.css
+++ b/UI/CSS/styles.css
@@ -684,41 +684,43 @@ body{
 @media (max-width: 768px){
     #main-area .slider .longParagraph p{
         font-size: 20px;
-        padding-top: 140px;
+        padding-top: 110px;
     }
     #main-area .slider .Two p{
         color: goldenrod;
-        padding-top: 140px;
+        padding-top: 110px;
     }
     #main-area .slider .Three p{
         color: white;
-        padding-top: 140px;
+        padding-top: 110px;
     }
     #main-area .slider .Five p{
         color: white;
-        padding-top: 140px;
+        padding-top: 110px;
     }
     #main-area .slider .Four p{
         color: white;
-        padding-top: 140px;
+        padding-top: 110px;
     }
     #main-area .slider h1{
-        font-size: 90px;
+        font-size: 60px;
         padding-top: 30px;
     }
     .adsArea{
         padding-left: 0px;
         flex-wrap: wrap;
         margin-left: 0px;
+        /* padding-top: 20px; */
+        
     }
 
     .window{
         /* border: 2px solid black; */
         margin-left: 10px;
         margin-top: 50px;
-        padding-top: 30px;
+        padding-top: 20px;
         width: 48%;
-        height: 230px;
+        height: 170px;
     }
     .window i {
         margin-top: 10px;
@@ -970,8 +972,25 @@ body{
         margin-bottom: 80px;
     }
     .adsArea{
-        margin: 5px;
-        font-size: 30px;
+        /* margin: 5px; */
+        font-size: 20px;
+    }
+    .window{
+        height: 100px;
+        width: 60%;
+        margin-left: 90px;
+        padding-top: 0px;
+    }
+    .window h3{
+        font-size: 10px;
+    }
+    .window i {
+        margin-top: 10px;
+        font-size: 25px;
+        color: rgb(253, 176, 9);
+    }
+    .window h1 {
+        font-size: 10px;
     }
     .signupDashboard{ 
         margin-top: 20px;
